<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.vortex.vortex.activities.RegisterAccountActivity"
    android:orientation="vertical"
    android:background="@color/colorRegisterBG">


    <TextView
        android:text="@string/text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorButtonBG"
        android:textAllCaps="true"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:id="@+id/reg_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:id="@+id/reg_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/propmt_retype_password"
            android:id="@+id/reg_validate_password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_device_id"
            android:id="@+id/reg_device_id" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:text="@string/text_accept_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxAgreement"
        android:layout_marginTop="15dp"
        android:gravity="center"
        />

    <TextView
        android:text="@string/text_terms_of_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textTermsOfAgreements"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorTextLink"
        />

    <Button
        android:layout_marginTop="40dp"
        android:text="@string/action_register_online"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_register"
        android:background="@color/colorButtonBG"/>

    <TextView
        android:text="@string/text_already_a_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textGoToLogin"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorRegisterAccent"/>
</LinearLayout>
